# pylogctx

./: .gitignore  .travis.yml  CHANGELOG.rst  HACKING.rst  MANIFEST.in  Makefile  README.md  README.rst  USAGE.rst  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: test.yml
src/: django_context_logging.py  test_django_context_logging.py
src/pylogctx/: __init__.py  celery.py  compat.py  context.py  core.py  django.py  helpers.py
src/pylogctx/ext/django/: __init__.py
src/tests/: common_fixture.py  test_context.py
src/tests/ext/: test_django.py
tests/: settings.py  test_celery.py  test_core.py  test_django.py  test_helpers.py
